// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search page: render Matches snapshot 1`] = `
Array [
  <main>
    <form
      onSubmit={[Function]}
    >
      <input
        name="search"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
    <dl />
  </main>,
  <footer />,
]
`;

exports[`Search page: render Matches snapshot with given query 1`] = `
Array [
  <main>
    <form
      onSubmit={[Function]}
    >
      <input
        name="search"
        onChange={[Function]}
        type="text"
        value="afar-breidr"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
    <dl>
      <dt>
        <a
          href="/word/afar-breidr"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          afar-breiðr
        </a>
      </dt>
    </dl>
  </main>,
  <footer />,
]
`;
